Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -183,69 +183,69 @@
 <a id="basic-javascript" class="anchor" href="#basic-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic JavaScript</h2>
 
 <ol>
-<li>Comment your JavaScript Code</li>
-<li>Understand Boolean Values</li>
-<li>Declare JavaScript Variables</li>
-<li>Declare String Variables</li>
-<li>Check the Length Property of a String Variable</li>
-<li>Use Bracket Notation to Find the First Character in a String</li>
-<li>Use Bracket Notation to Find the Nth Character in a String</li>
-<li>Use Bracket Notation to Find the Last Character in a String</li>
-<li>Use Bracket Notation to Find the Nth-to-Last Character in a String</li>
-<li>Add Two Numbers with JavaScript</li>
-<li>Subtract One Number from Another with JavaScript</li>
-<li>Multiply Two Numbers with JavaScript</li>
-<li>Divide One Number by Another with JavaScript</li>
-<li>Create Decimal Numbers with JavaScript</li>
-<li>Perform Arithmetic Operations on Decimals with JavaScript</li>
-<li>Store Multiple Values in one Variable using JavaScript Arrays</li>
-<li>Nest one Array within Another Array</li>
-<li>Access Array Data with Indexes</li>
-<li>Modify Array Data With Indexes</li>
-<li>Manipulate Arrays With pop()</li>
-<li>Manipulate Arrays With push()</li>
-<li>Manipulate Arrays With shift()</li>
-<li>Manipulate Arrays With unshift()</li>
-<li>Write Reusable JavaScript with Functions</li>
-<li>Build JavaScript Objects</li>
-<li>Manipulate JavaScript Objects</li>
-<li>Iterate with JavaScript For Loops</li>
-<li>Iterate with JavaScript While Loops</li>
-<li>Generate Random Fractions with JavaScript</li>
-<li>Generate Random Whole Numbers with JavaScript</li>
-<li>Generate Random Whole Numbers within a Range</li>
-<li>Use Conditional Logic with If-Else Statements</li>
-<li>Sift through Text with Regular Expressions</li>
-<li>Find Numbers with Regular Expressions</li>
-<li>Find White Space with Regular Expressions</li>
-<li>Invert Regular Expression Matches with JavaScript</li>
-<li>Create a JavaScript Slot Machine</li>
-<li>Add your JavaScript Slot Machine Slots</li>
-<li>Bring your JavaScript Slot Machine to Life</li>
-<li>Give your JavaScript Slot Machine some stylish images</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#comment-your-javascript-code">Comment your JavaScript Code</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#understand-boolean-values">Understand Boolean Values</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#declare-javascript-variables">Declare JavaScript Variables</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#declare-string-variables">Declare String Variables</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#check-the-length-property-of-a-string-variable">Check the Length Property of a String Variable</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-bracket-notation-to-find-the-first-character-in-a-string">Use Bracket Notation to Find the First Character in a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-bracket-notation-to-find-the-nth-character-in-a-string">Use Bracket Notation to Find the Nth Character in a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-bracket-notation-to-find-the-last-character-in-a-string">Use Bracket Notation to Find the Last Character in a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-bracket-notation-to-find-the-nth-to-last-character-in-a-string">Use Bracket Notation to Find the Nth-to-Last Character in a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#add-two-numbers-with-javascript">Add Two Numbers with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#subtract-one-number-from-another-with-javascript">Subtract One Number from Another with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#multiply-two-numbers-with-javascript">Multiply Two Numbers with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#divide-one-number-by-another-with-javascript">Divide One Number by Another with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#create-decimal-numbers-with-javascript">Create Decimal Numbers with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#perform-arithmetic-operations-on-decimals-with-javascript">Perform Arithmetic Operations on Decimals with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#store-multiple-values-in-one-variable-using-javascript-arrays">Store Multiple Values in one Variable using JavaScript Arrays</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#nest-one-array-within-another-array">Nest one Array within Another Array</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#access-array-data-with-indexes">Access Array Data with Indexes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#modify-array-data-with-indexes">Modify Array Data With Indexes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#manipulate-arrays-with-pop">Manipulate Arrays With pop()</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#manipulate-arrays-with-push">Manipulate Arrays With push()</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#manipulate-arrays-with-shift">Manipulate Arrays With shift()</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#manipulate-arrays-with-unshift">Manipulate Arrays With unshift()</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#write-reusable-javascript-with-functions">Write Reusable JavaScript with Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#build-javascript-objects">Build JavaScript Objects</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#manipulate-javascript-objects">Manipulate JavaScript Objects</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-for-loops">Iterate with JavaScript For Loops</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-for-loops">Iterate with JavaScript While Loops</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-while-loops">Generate Random Fractions with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-fractions-with-javascript">Generate Random Whole Numbers with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-whole-numbers-within-a-range">Generate Random Whole Numbers within a Range</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-conditional-logic-with-if-else-statements">Use Conditional Logic with If-Else Statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#sift-through-text-with-regular-expressions">Sift through Text with Regular Expressions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#find-numbers-with-regular-expressions">Find Numbers with Regular Expressions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#find-white-space-with-regular-expressions">Find White Space with Regular Expressions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#invert-regular-expression-matches-with-javascript">Invert Regular Expression Matches with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#create-a-javascript-slot-machine">Create a JavaScript Slot Machine</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#add-your-javascript-slot-machine-slots">Add your JavaScript Slot Machine Slots</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#bring-your-javascript-slot-machine-to-life">Bring your JavaScript Slot Machine to Life</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#give-your-javascript-slot-machine-some-stylish-images">Give your JavaScript Slot Machine some stylish images</a></li>
 </ol>
 
 <h2>
 <a id="basic-algorithm-scripting" class="anchor" href="#basic-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Algorithm Scripting</h2>
 
 <ol>
-<li>Meet Bonfire</li>
-<li>Reverse a String</li>
-<li>Factorialize a Number</li>
-<li>Check for Palindromes</li>
-<li>Find the Longest Word in a String</li>
-<li>Title Case a Sentence</li>
-<li>Return Largest Numbers in Arrays</li>
-<li>Confirm the Ending</li>
-<li>Repeat a string repeat a string</li>
-<li>Truncate a string</li>
-<li>Chunky Monkey</li>
-<li>Slasher Flick</li>
-<li>Mutations</li>
-<li>Falsey Bouncer</li>
-<li>Where art thou</li>
-<li>Seek and Destroy</li>
-<li>Where do I belong</li>
+<li><a href="">Meet Bonfire</a></li>
+<li><a href="">Reverse a String</a></li>
+<li><a href="">Factorialize a Number</a></li>
+<li><a href="">Check for Palindromes</a></li>
+<li><a href="">Find the Longest Word in a String</a></li>
+<li><a href="">Title Case a Sentence</a></li>
+<li><a href="">Return Largest Numbers in Arrays</a></li>
+<li><a href="">Confirm the Ending</a></li>
+<li><a href="">Repeat a string repeat a string</a></li>
+<li><a href="">Truncate a string</a></li>
+<li><a href="">Chunky Monkey</a></li>
+<li><a href="">Slasher Flick</a></li>
+<li><a href="">Mutations</a></li>
+<li><a href="">Falsey Bouncer</a></li>
+<li><a href="">Where art thou</a></li>
+<li><a href="">Seek and Destroy</a></li>
+<li><a href="">Where do I belong</a></li>
 </ol>
 
 <h2>
