Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -229,35 +229,35 @@
 <a id="basic-algorithm-scripting" class="anchor" href="#basic-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Algorithm Scripting</h2>
 
 <ol>
-<li><a href="">Meet Bonfire</a></li>
-<li><a href="">Reverse a String</a></li>
-<li><a href="">Factorialize a Number</a></li>
-<li><a href="">Check for Palindromes</a></li>
-<li><a href="">Find the Longest Word in a String</a></li>
-<li><a href="">Title Case a Sentence</a></li>
-<li><a href="">Return Largest Numbers in Arrays</a></li>
-<li><a href="">Confirm the Ending</a></li>
-<li><a href="">Repeat a string repeat a string</a></li>
-<li><a href="">Truncate a string</a></li>
-<li><a href="">Chunky Monkey</a></li>
-<li><a href="">Slasher Flick</a></li>
-<li><a href="">Mutations</a></li>
-<li><a href="">Falsey Bouncer</a></li>
-<li><a href="">Where art thou</a></li>
-<li><a href="">Seek and Destroy</a></li>
-<li><a href="">Where do I belong</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Meet-Bonfire">Meet Bonfire</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Reverse-a-String">Reverse a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Factorialize-a-Number">Factorialize a Number</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Check-for-Palindromes">Check for Palindromes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Find-the-Longest-Word-in-a-String">Find the Longest Word in a String</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Title-Case-a-Sentence">Title Case a Sentence</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Return-Largest-Numbers-in-Arrays">Return Largest Numbers in Arrays</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Confirm-the-Ending">Confirm the Ending</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Repeat-a-string-repeat-a-string">Repeat a string repeat a string</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Truncate-a-string">Truncate a string</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Chunky-Monkey">Chunky Monkey</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Slasher-Flick">Slasher Flick</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Mutations">Mutations</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Falsey-Bouncer">Falsey Bouncer</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Where-art-thou">Where art thou</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Seek-and-Destroy">Seek and Destroy</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Where-do-I-belong">Where do I belong</a></li>
 </ol>
 
 <h2>
 <a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
 
 <ol>
-<li>Get Set for Ziplines</li>
-<li>Build a Personal Portfolio Webpage</li>
-<li>Build a Random Quote Machine</li>
-<li>Show the Local Weather</li>
-<li>Build a Pomodoro Clock</li>
-<li>Use the Twitch.tv JSON API</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Get-Set-for-Ziplines">Get Set for Ziplines</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Build-a-Personal-Portfolio-Webpage">Build a Personal Portfolio Webpage</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Build-a-Random-Quote-Machine">Build a Random Quote Machine</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Show-the-Local-Weather">Show the Local Weather</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Build-a-Pomodoro-Clock">Build a Pomodoro Clock</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Use-the-Twitch.tv-JSON-API">Use the Twitch.tv JSON API</a></li>
 </ol>
 
 <h2>
