--- a/Basic Front End Development Projects/portfolio.html
+++ b/Basic Front End Development Projects/portfolio.html
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Rafael Rodriguez</a>
+        <a class="navbar-brand" id="name" href="#">Rafael Rodriguez</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -23,15 +23,18 @@
     </div>
   </nav>
   <!-- Home -->
-  <div id="home">
+  <section id="home">
     <h1>Rafael Rodriguez</h1>
-    <p>My name is Rafael Rodriguez. I’m a Computer Science graduate from Lehman College, NY. A single parent, co-founder of TealSeagull LLC (still cooking), I work as a freelancer for the time being, I write reviews, talk about my personal projects and even
-      have two small books published at the moment.</p><img src="https://rafase282.files.wordpress.com/2014/04/img_20140515_180049.jpg?w=225&h=300">
-  </div>
-  <!-- Experience -->
-  <div id="experience">
-    <div class="container">
-      <h1>My Experience</h2>
+    <h2>Creative Solutions</h2>
+    <img class="img-responsive img-circle displayed" id="me" src="https://avatars.githubusercontent.com/u/285138?v=3">
+    <div class="img-text">
+      <p>My name is Rafael Rodriguez. I’m a Computer Science graduate from Lehman College, NY. A single parent, co-founder of TealSeagull LLC (still cooking), I work as a freelancer for the time being, I write reviews, talk about my personal projects and
+        even have two small books published at the moment.</p>
+    </section>
+    <!-- Experience -->
+    <section id="experience">
+      <div class="container">
+        <h1>My Experience</h2>
       <p>Here is some of my past employment history.</p>
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
@@ -66,50 +69,91 @@
               <ul>
                 <li>Assist in the setup of new computer equipment in classroom and offices.</li>
                 <li>Install software.</li>
-<li>Ensure that LCD projector, smart boards, and other related audio/video equipment remains functional.</li>
-<li>Troubleshoot hardware and software problems in conjunction with Department of Education (DOE) Help Center and borough technology staff.</li>
-<li>Configure wireless devices to access DOE network.</li>
-<li>Maintain classroom servers.</li>
-<li>Maintain technology equipment inventory.</li>
-<li>Monitor equipment in the technology laboratory.</li>
-<li>Coordinate with MOUSE Squad, if applicable.</li>
-<li>Local and network ghosting.</li>
-<li>Troubleshoot and setup network printers.</li>
-<li>Network administrator for Windows Server 2008.</li>
-<li>Desktop support for teachers.</li>
+                <li>Ensure that LCD projector, smart boards, and other related audio/video equipment remains functional.</li>
+                <li>Troubleshoot hardware and software problems in conjunction with Department of Education (DOE) Help Center and borough technology staff.</li>
+                <li>Configure wireless devices to access DOE network.</li>
+                <li>Maintain classroom servers.</li>
+                <li>Maintain technology equipment inventory.</li>
+                <li>Monitor equipment in the technology laboratory.</li>
+                <li>Coordinate with MOUSE Squad, if applicable.</li>
+                <li>Local and network ghosting.</li>
+                <li>Troubleshoot and setup network printers.</li>
+                <li>Network administrator for Windows Server 2008.</li>
+                <li>Desktop support for teachers.</li>
               </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <!-- Portfolio -->
-  <div id="portfolio">
+  <section id="portfolio">
     <h1>Portfolio</h1>
-      <p>Try to scroll this page and look at the navigation bar while scrolling!</p>
-    </div>
-    <!-- Contact -->
-    <div id="contact">
-      <div id="contact-info">
-        <h1>Contact Me</h1>
-        <div class="btn-group-vertical">
-          <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-envelope fa-fw"></i><a href="mailto:rafase282@gmail.com"> E-mail</button>
-            <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-github fa-fw"></i><a href="https://github.com/Rafase282" target='_blank'> GitHub</button>
-        <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/rafase282" target='_blank'> LinkedIn</button>
-        <button type="button" class="btn btn-primary btn-lg "><i class="fa fa-codepen"></i><a href="http://codepen.io/Rafase282" target='_blank'> CodePen</button>
-          <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-facebook-square"></i><a href="https://www.facebook.com/Rafase282" target='_blank'> Facebook</button>
-          <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-wordpress"></i><a href="https://rafase282.wordpress.com/" target='_blank'> WordPress</button>
-            <button type="button" class="btn btn-primary btn-lg"><i class="fa fa-fire fa-fw"></i><a href="http://www.freecodecamp.com/rafase282" target='_blank'> FreeCodeCamp</button>
+        <p>My upcoming projects will be here!</p>
+        <div class="container">
+          <!-- Example row of columns -->
+          <div class="row">
+            <div class="col-md-3">
+              <div class="well">
+                <a href="#" class="thumbnail">
+                  <img src="http://lorempixel.com/output/technics-h-c-171-180-4.jpg" alt="...">
+                </a>
+              </div>
 
-      </div>
-    </div>
-          <div id="twitter-feed">
-          <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
+            </div>
+            <div class="col-md-3">
+              <div class="well">
+                <a href="#" class="thumbnail">
+                  <img src="http://lorempixel.com/output/nightlife-h-c-171-180-10.jpg" alt="...">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="well">
+                <a href="#" class="thumbnail">
+                  <img src="http://lorempixel.com/output/sports-h-c-171-180-7.jpg" alt="...">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="well">
+                <a href="#" class="thumbnail">
+                  <img src="http://lorempixel.com/output/food-h-c-171-180-1.jpg" alt="...">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact -->
+      <section id="contact">
+        <div id="contact-info">
+          <h1>Contact Me</h1>
+          <!-- Twitter feed widget -->
+          <div id="twitter-feed" align="center">
+            <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
+          </div>
+
+          <!-- social media buttons -->
+          <div class="social" align="center">
+            <div class="btn-group-vertical">
+              <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i><a href="mailto:rafase282@gmail.com"></a> E-mail</button>
+        <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i><a href="https://github.com/Rafase282" target='_blank'> GitHub</button>
+        </div>
+        <div class="btn-group-vertical">
+        <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/rafase282" target='_blank'></a> LinkedIn</button>
+        <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i><a href="http://codepen.io/Rafase282" target='_blank'></a> CodePen</button>
+        </div>
+        <div class="btn-group-vertical">
+        <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i><a href="http://www.freecodecamp.com/rafase282" target='_blank'></a> FreeCodeCamp</button>
+        <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i><a href="https://rafase282.wordpress.com/" target='_blank'></a> WordPress</button>
+         </div>
         </div>
       </div>
-      <footer>
-        <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
-          <p>
-      </footer>
+    </section>
+<!-- The footer -->
+    <footer>
+      <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved<p>
+    </footer>
 </body>
