--- a/Basic Front End Development Projects/portfolio.html
+++ b/Basic Front End Development Projects/portfolio.html
@@ -5,155 +5,181 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" id="name" href="#">Rafael Rodriguez</a>
+        <a class="navbar-brand" href="#">Rafael Rodriguez</a>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div class="collapse navbar-collapse myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-          <li><a href="#experience"><span class = "glyphicon glyphicon-info-sign"></span> Experience</a></li>
-          <li><a href="#portfolio"><span class="glyphicon glyphicon-briefcase"></span> Portfolio</a></li>
-          <li><a href="#contact"><span class="glyphicon glyphicon-comment"></span> Contact</a></li>
+          <li class="active">
+            <a href="#home">
+              <span class="glyphicon glyphicon-home"></span> Home</a>
+          </li>
+          <li>
+            <a href="#experience">
+              <span class="glyphicon glyphicon-info-sign"></span> Experience</a>
+          </li>
+          <li>
+            <a href="#portfolio">
+              <span class="glyphicon glyphicon-briefcase"></span> Portfolio</a>
+          </li>
+          <li>
+            <a href="#contact">
+              <span class="glyphicon glyphicon-comment"></span> Contact</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- Home -->
-  <section id="home">
+  <section class="home" id="home">
     <h1>Rafael Rodriguez</h1>
     <h2>Creative Solutions</h2>
-    <img class="img-responsive img-circle displayed" id="me" src="https://avatars.githubusercontent.com/u/285138?v=3">
+    <img class="img-responsive img-circle displayed me" src="https://avatars.githubusercontent.com/u/285138?v=3">
     <div class="img-text">
       <p>My name is Rafael Rodriguez. I’m a Computer Science graduate from Lehman College, NY. A single parent, co-founder of TealSeagull LLC (still cooking), I work as a freelancer for the time being, I write reviews, talk about my personal projects and
         even have two small books published at the moment.</p>
-    </section>
-    <!-- Experience -->
-    <section id="experience">
-      <div class="container">
-        <h1>My Experience</h2>
-      <p>Here is some of my past employment history.</p>
-      <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Freelancer UpWork</a>
-        </h4>
-          </div>
-          <div id="collapse1" class="panel-collapse collapse in">
-            <div class="panel-body">Over the past year I have polished and improved my Amazon services regarding publishing, eBook creation, ghostwriting, Amazon research, and technical support for Kindle services. Besides my writing experience with Amazon, I have also done blogs, articles, web research, and data entry jobs in occasions.  I also work on the technical side and do plenty of help-desk related task, email handling, and QA for software and systems. I have experience in python, Go, java,and other programming languages, although I have done more web development recently.  I put a lot of dedication in my work, however simple the task might be to ensure the work is done correctly and as fast as efficiently possible. I work full time as a freelancer so I'm easy to reach any day.</div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Independent Contrator for NYC Board of Education</a>
-        </h4>
-          </div>
-          <div id="collapse2" class="panel-collapse collapse">
-            <div class="panel-body">November 2014 – Present (10 months)<h5>Job Responsibilities<h5>
-              I provide Help-desk and other on demand solutions to the NYC public schools. Currently I have worked on M.S. 219, setting up a computer lab for the school, upgrading and setting up iPads and other Help-desk related tasks.</div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Information Technology Intern</a>
-        </h4>
-          </div>
-          <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">September 2010 – July 2014 (3 years 11 months) Bronx, NY<h5>Job Responsibilities</h5>
-              <ul>
-                <li>Assist in the setup of new computer equipment in classroom and offices.</li>
-                <li>Install software.</li>
-                <li>Ensure that LCD projector, smart boards, and other related audio/video equipment remains functional.</li>
-                <li>Troubleshoot hardware and software problems in conjunction with Department of Education (DOE) Help Center and borough technology staff.</li>
-                <li>Configure wireless devices to access DOE network.</li>
-                <li>Maintain classroom servers.</li>
-                <li>Maintain technology equipment inventory.</li>
-                <li>Monitor equipment in the technology laboratory.</li>
-                <li>Coordinate with MOUSE Squad, if applicable.</li>
-                <li>Local and network ghosting.</li>
-                <li>Troubleshoot and setup network printers.</li>
-                <li>Network administrator for Windows Server 2008.</li>
-                <li>Desktop support for teachers.</li>
-              </ul>
+    </div>
+  </section>
+  <!-- Experience -->
+  <section class="experience" id="experience">
+    <div class="container">
+      <h1>My Experience</h2>
+        <p>Here is some of my past employment history.</p>
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Freelancer UpWork</a>
+              </h4>
             </div>
+            <div id="collapse1" class="panel-collapse collapse in">
+              <div class="panel-body">Over the past year I have polished and improved my Amazon services regarding publishing, eBook creation, ghostwriting, Amazon research, and technical support for Kindle services. Besides my writing experience with Amazon, I have also done
+                blogs, articles, web research, and data entry jobs in occasions. I also work on the technical side and do plenty of help-desk related task, email handling, and QA for software and systems. I have experience in python, Go, java,and other
+                programming languages, although I have done more web development recently. I put a lot of dedication in my work, however simple the task might be to ensure the work is done correctly and as fast as efficiently possible. I work full time
+                as a freelancer so I'm easy to reach any day.</div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Independent Contrator for NYC Board of Education</a>
+              </h4>
+            </div>
+            <div id="collapse2" class="panel-collapse collapse">
+              <div class="panel-body">November 2014 – Present (10 months)
+                <h5>Job Responsibilities
+                  <h5>
+                    I provide Help-desk and other on demand solutions to the NYC public schools. Currently I have worked on M.S. 219, setting up a computer lab for the school, upgrading and setting up iPads and other Help-desk related tasks.</div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Information Technology Intern</a>
+              </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+              <div class="panel-body">
+                September 2010 – July 2014 (3 years 11 months) Bronx, NY
+                <h5>Job Responsibilities</h5>
+                <ul>
+                  <li>Assist in the setup of new computer equipment in classroom and offices.</li>
+                  <li>Install software.</li>
+                  <li>Ensure that LCD projector, smart boards, and other related audio/video equipment remains functional.</li>
+                  <li>Troubleshoot hardware and software problems in conjunction with Department of Education (DOE) Help Center and borough technology staff.</li>
+                  <li>Configure wireless devices to access DOE network.</li>
+                  <li>Maintain classroom servers.</li>
+                  <li>Maintain technology equipment inventory.</li>
+                  <li>Monitor equipment in the technology laboratory.</li>
+                  <li>Coordinate with MOUSE Squad, if applicable.</li>
+                  <li>Local and network ghosting.</li>
+                  <li>Troubleshoot and setup network printers.</li>
+                  <li>Network administrator for Windows Server 2008.</li>
+                  <li>Desktop support for teachers.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <!-- Portfolio -->
+  <section class="portfolio" id="portfolio">
+    <h1>Portfolio</h1>
+    <p>My upcoming projects will be here!</p>
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-3">
+          <div class="well">
+            <a href="#" class="thumbnail">
+              <img src="http://lorempixel.com/output/technics-h-c-171-180-4.jpg" alt="...">
+            </a>
+          </div>
+
+        </div>
+        <div class="col-md-3">
+          <div class="well">
+            <a href="#" class="thumbnail">
+              <img src="http://lorempixel.com/output/nightlife-h-c-171-180-10.jpg" alt="...">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="well">
+            <a href="#" class="thumbnail">
+              <img src="http://lorempixel.com/output/sports-h-c-171-180-7.jpg" alt="...">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="well">
+            <a href="#" class="thumbnail">
+              <img src="http://lorempixel.com/output/food-h-c-171-180-1.jpg" alt="...">
+            </a>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- Portfolio -->
-  <section id="portfolio">
-    <h1>Portfolio</h1>
-        <p>My upcoming projects will be here!</p>
-        <div class="container">
-          <!-- Example row of columns -->
-          <div class="row">
-            <div class="col-md-3">
-              <div class="well">
-                <a href="#" class="thumbnail">
-                  <img src="http://lorempixel.com/output/technics-h-c-171-180-4.jpg" alt="...">
-                </a>
-              </div>
+  <!-- Contact -->
+  <section class="contact" id="contact">
+    <div class="contact-info">
+      <h1>Contact Me</h1>
+      <!-- Twitter feed widget -->
+      <div id="twitter-feed" align="center">
+        <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
+      </div>
 
-            </div>
-            <div class="col-md-3">
-              <div class="well">
-                <a href="#" class="thumbnail">
-                  <img src="http://lorempixel.com/output/nightlife-h-c-171-180-10.jpg" alt="...">
-                </a>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="well">
-                <a href="#" class="thumbnail">
-                  <img src="http://lorempixel.com/output/sports-h-c-171-180-7.jpg" alt="...">
-                </a>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="well">
-                <a href="#" class="thumbnail">
-                  <img src="http://lorempixel.com/output/food-h-c-171-180-1.jpg" alt="...">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Contact -->
-      <section id="contact">
-        <div id="contact-info">
-          <h1>Contact Me</h1>
-          <!-- Twitter feed widget -->
-          <div id="twitter-feed" align="center">
-            <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
-          </div>
-
-          <!-- social media buttons -->
-          <div class="social" align="center">
-            <div class="btn-group-vertical">
-              <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i><a href="mailto:rafase282@gmail.com"></a> E-mail</button>
-        <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i><a href="https://github.com/Rafase282" target='_blank'> GitHub</button>
+      <!-- social media buttons -->
+      <div class="social" align="center">
+        <div class="btn-group-vertical">
+          <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i>
+            <a href="mailto:rafase282@gmail.com"></a> E-mail</button>
+          <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i>
+            <a href="https://github.com/Rafase282" target='_blank'></a> GitHub</button>
         </div>
         <div class="btn-group-vertical">
-        <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/rafase282" target='_blank'></a> LinkedIn</button>
-        <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i><a href="http://codepen.io/Rafase282" target='_blank'></a> CodePen</button>
+          <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rafase282" target='_blank'></a> LinkedIn</button>
+          <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i>
+            <a href="http://codepen.io/Rafase282" target='_blank'></a> CodePen</button>
         </div>
         <div class="btn-group-vertical">
-        <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i><a href="http://www.freecodecamp.com/rafase282" target='_blank'></a> FreeCodeCamp</button>
-        <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i><a href="https://rafase282.wordpress.com/" target='_blank'></a> WordPress</button>
-         </div>
+          <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i>
+            <a href="http://www.freecodecamp.com/rafase282" target='_blank'></a> FreeCodeCamp</button>
+          <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i>
+            <a href="https://rafase282.wordpress.com/" target='_blank'></a> WordPress</button>
         </div>
       </div>
-    </section>
-<!-- The footer -->
-    <footer>
-      <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved<p>
-    </footer>
+    </div>
+  </section>
+  <!-- The footer -->
+  <footer>
+    <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
+  </footer>
 </body>
