--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -133,7 +133,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="#" class="thumbnail">
-              <img src="http://lorempixel.com/output/technics-h-c-171-180-4.jpg" alt="Project 1">
+              <img src="http://dev.tealseagull.com/Rafael/img/abstract-h-c-171-180-1.jpg" alt="Project 1">
             </a>
             <h2 class="gray-text">Project Title</h2>
             <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -142,7 +142,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="#" class="thumbnail">
-              <img src="http://lorempixel.com/output/nightlife-h-c-171-180-10.jpg" alt="Project 2">
+              <img src="http://dev.tealseagull.com/Rafael/img/sports-h-c-171-180-6.jpg" alt="Project 2">
             </a>
             <h2 class="gray-text">Project Title</h2>
             <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -151,7 +151,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="#" class="thumbnail">
-              <img src="http://lorempixel.com/output/sports-h-c-171-180-7.jpg" alt="Project 3">
+              <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-1.jpg" alt="Project 3">
             </a>
             <h2 class="gray-text">Project Title</h2>
             <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -160,7 +160,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="#" class="thumbnail">
-              <img src="http://lorempixel.com/output/food-h-c-171-180-1.jpg" alt="Project 4">
+              <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-10.jpg" alt="Project 4">
             </a>
             <h2 class="gray-text">Project Title</h2>
             <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
