--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -187,22 +187,34 @@
       <!-- social media buttons -->
       <div class="social" align="center">
         <div class="btn-group-vertical">
-          <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i>
-            <a href="mailto:rafase282@gmail.com"></a> E-mail</button>
-          <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i>
-            <a href="https://github.com/Rafase282" target='_blank'></a> GitHub</button>
+          <a href="mailto:rafase282@gmail.com">
+            <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i> E-mail
+            </button>
+          </a>
+          <a href="https://github.com/Rafase282" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i> GitHub
+            </button>
+          </a>
         </div>
         <div class="btn-group-vertical">
-          <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/rafase282" target='_blank'></a> LinkedIn</button>
-          <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i>
-            <a href="http://codepen.io/Rafase282" target='_blank'></a> CodePen</button>
+          <a href="https://www.linkedin.com/in/rafase282" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i> LinkedIn
+            </button>
+          </a>
+          <a href="http://codepen.io/Rafase282" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i> CodePen
+            </button>
+          </a>
         </div>
         <div class="btn-group-vertical">
-          <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i>
-            <a href="http://www.freecodecamp.com/rafase282" target='_blank'></a> FreeCodeCamp</button>
-          <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i>
-            <a href="https://rafase282.wordpress.com/" target='_blank'></a> WordPress</button>
+          <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i> FreeCodeCamp
+            </button>
+          </a>
+          <a href="https://rafase282.wordpress.com/" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i> WordPress
+            </button>
+          </a>
         </div>
       </div>
     </div>
