--- a/Basic Front End Development Projects/Local Weather/index.html
+++ b/Basic Front End Development Projects/Local Weather/index.html
@@ -20,7 +20,7 @@
         <label>
           <input type="radio" checked name="farenheit-celcius" id="f"> Farenheit</label>
         <label>
-          <input type="radio" name="farenheit-celcius" id="c"> Celcious</label>
+          <input type="radio" name="farenheit-celcius" id="c"> Celsius</label>
       </form>
     </div>
   </section>
