--- a/Basic Front End Development Projects/Local Weather/index.html
+++ b/Basic Front End Development Projects/Local Weather/index.html
@@ -12,8 +12,8 @@
 <body>
 
   <section class="container-fluid">
-    <h1 class='text-primary'>Free Code Camp Zipline</h1>
-    <h2 class='text-primary'>Local Weather!</h2>
+    <h1 class='text-primary bg-info'>Free Code Camp Zipline</h1>
+    <h2 class='text-primary bg-info'>Local Weather!</h2>
     <div class="well">
       <p id="weather"></p>
       <form action="/select-metric">
@@ -27,6 +27,7 @@
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
   </footer>
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
   <script src="js/index.js"></script>
